# grass

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  coveralls.json  vc140.idb
.devcontainer/: devcontainer.json
.github/: codecov.yml
.github/workflows/: cmake-multi-platform.yml  cover.yml  web.yml
demo/: CMakeLists.txt  README.md  Table.h  env.h  irhall.h  main.cpp  shell.html  user.h
dyn/: CMakeLists.txt  README.md  barnes_hut.h  circle.h  halton.h  kahan.h  morton.h  newton.h  tree.h  verlet.h  yoshida.h
grass/: CMakeLists.txt  grass.cpp  wow.cpp  wow.cppm
hierarchydemo/: CMakeLists.txt  main.cpp  user.h
quadrantdemo/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  circle_test.cpp  morton_test.cpp  newton_test.cpp  test1.cpp  tree_test.cpp  yoshida_test.cpp
tree3demo/: CMakeLists.txt  main.cpp
